# zen

./: .gitlab-ci.yml  CLAUDE.md  README.md  index.html  methodology.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: logging.rs  main.rs  notifications.rs  storage.rs  sudo.rs  updates.rs
src-tauri/src/vpn/: killswitch.rs  manager.rs  mod.rs  process.rs  types.rs
src-tauri/src/vpn/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/components/: Settings.tsx
src/services/: notifications.ts
