[package]
name = "zen-privacy"
version = "2.2.0-beta"
description = "Zen Privacy - Privacy protection client"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }


[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "fs", "time", "macros", "rt"] }
urlencoding = "2"
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
flate2 = "1"
tar = "0.4"
zip = "0.6"
dirs = "5"
backon = { version = "1", features = ["tokio-sleep"] }
semver = "1"
sha2 = "0.10"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
